--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
 
@@ -14,6 +15,49 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <nav>
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Portfolio</a>
+    <a href="#">Contact</a>
+  </nav>
+
+  <header>
+    <img src="" alt="">
+    <h1>William Berlin - Web Dev</h1>
+    <p>Technology is my jam!</p>
+    <p>Occasionally I have time to work on side projects, if you're interested, let me know by signing up on this
+      website.</p>
+    <button type="button">Let's Team Up</button>
+  </header>
+
+  <section class="top-content">
+    <div class="box-1">
+      <h2>Listen Up...</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia praesentium deleniti tempora quis explicabo
+        dignissimos distinctio enim, quidem dolorem aliquid consectetur fugiat dolores, voluptatum repellat fuga odit
+        quaerat laboriosam mollitia.</p>
+    </div>
+    <div class="box-2">
+      <h2>Stuff I'm Good At:</h2>
+      <p>Disk Golf</p>
+      <p>Codin up UI</p>
+      <p>Playing lots of video games</p>
+      <p>Uising bootstrap grid</p>
+      <p>Taking long naps</p>
+    </div>
+  </section>
+
+  <section class="bottom content">
+    <h1>Work History</h1>
+    <div class="experience-chart">
+
+    </div>
+  </section>
+
+  <footer>
+    Copyright Awesomeness 2018
+  </footer>
 </body>
+
 </html>
