--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>My Resume</title>
 
   <link rel="stylesheet" href="css/index.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -15,49 +16,55 @@
 </head>
 
 <body>
-  <nav>
-    <a href="#">Home</a>
-    <a href="#">About</a>
-    <a href="#">Portfolio</a>
-    <a href="#">Contact</a>
-  </nav>
+  <div class="container">
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Portfolio</a>
+      <a href="#">Contact</a>
+    </nav>
 
-  <header>
-    <img src="" alt="">
-    <h1>William Berlin - Web Dev</h1>
-    <p>Technology is my jam!</p>
-    <p>Occasionally I have time to work on side projects, if you're interested, let me know by signing up on this
-      website.</p>
-    <button type="button">Let's Team Up</button>
-  </header>
+    <header>
+      <div class="header-top">
+        <img src="images/PortfolioImage.jpg" alt="Profile pic">
+        <h1>William Berlin - Web Dev</h1>
+        <p>Technology is my jam!</p>
+      </div>
+      <div class="header-bottom">
+        <p>Occasionally I have time to work on side projects, if you're interested, let me know by signing up on this
+          website.</p>
+        <button type="button">Let's Team Up</button>
+      </div>
+    </header>
 
-  <section class="top-content">
-    <div class="box-1">
-      <h2>Listen Up...</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia praesentium deleniti tempora quis explicabo
-        dignissimos distinctio enim, quidem dolorem aliquid consectetur fugiat dolores, voluptatum repellat fuga odit
-        quaerat laboriosam mollitia.</p>
-    </div>
-    <div class="box-2">
-      <h2>Stuff I'm Good At:</h2>
-      <p>Disk Golf</p>
-      <p>Codin up UI</p>
-      <p>Playing lots of video games</p>
-      <p>Uising bootstrap grid</p>
-      <p>Taking long naps</p>
-    </div>
-  </section>
+    <section class="top-content">
+      <div class="box-1">
+        <h2>Listen Up...</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia praesentium deleniti tempora quis explicabo
+          dignissimos distinctio enim, quidem dolorem aliquid consectetur fugiat dolores, voluptatum repellat fuga odit
+          quaerat laboriosam mollitia.</p>
+      </div>
+      <div class="box-2">
+        <h2>Stuff I'm Good At:</h2>
+        <p>Disk Golf</p>
+        <p>Codin up UI</p>
+        <p>Playing lots of video games</p>
+        <p>Uising bootstrap grid</p>
+        <p>Taking long naps</p>
+      </div>
+    </section>
 
-  <section class="bottom content">
-    <h1>Work History</h1>
-    <div class="experience-chart">
+    <section class="bottom content">
+      <h1>Work History</h1>
+      <div class="experience-chart">
 
-    </div>
-  </section>
+      </div>
+    </section>
 
-  <footer>
-    Copyright Awesomeness 2018
-  </footer>
+    <footer>
+      Copyright Awesomeness 2018
+    </footer>
+  </div>
 </body>
 
 </html>
