bottom-content HTML markup

--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
         <h2>Listen Up...</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia praesentium deleniti tempora quis explicabo
           dignissimos distinctio enim, quidem dolorem aliquid consectetur fugiat dolores, voluptatum repellat fuga odit
-          quaerat laboriosam mollitia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores nesciunt excepturi quos magnam quas rerum, eius recusandae repellendus ea obcaecati porro veniam cupiditate ipsa, totam dolorem laudantium natus, ipsum nulla? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit, voluptatem. Quaerat velit vitae quae placeat dolorem, ex quam voluptate quia quasi facere soluta voluptatum fugit! Cupiditate recusandae expedita fugiat numquam!</p>
+          quaerat laboriosam mollitia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores nesciunt
+          excepturi quos magnam quas rerum, eius recusandae repellendus ea obcaecati porro veniam cupiditate ipsa, totam
+          dolorem laudantium natus, ipsum nulla? Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          Reprehenderit, voluptatem. Quaerat velit vitae quae placeat dolorem, ex quam voluptate quia quasi facere
+          soluta voluptatum fugit! Cupiditate recusandae expedita fugiat numquam!</p>
       </div>
       <div class="box-2">
         <h2>Stuff I'm Good At:</h2>
@@ -54,10 +58,37 @@
       </div>
     </section>
 
-    <section class="bottom content">
-      <h1>Work History</h1>
+    <section class="bottom-content">
+      <h2>Work History</h2>
       <div class="experience-chart">
+        <div class="column-1">
+          <h3>Yrs</h3>
+          <p>1</p>
+          <p>2</p>
+          <p>3</p>
 
+        </div>
+        <div class="column-2">
+          <h3>Company</h3>
+          <p class="grey-bkg">Apple</p>
+          <p>Microsoft</p>
+          <p class="grey-bkg">Amazon</p>
+
+        </div>
+        <div class="column-3">
+          <h3>Title</h3>
+          <p class:"grey-bkg">Software Engineer</p>
+          <p>Computer Scientist</p>
+          <p class="grey-bkg">Dev Ops</p>
+
+        </div>
+        <div class="column-4">
+          <h3>Tech Used</h3>
+          <p class="grey-bkg">Swift</p>
+          <p>.NET</p>
+          <p class="grey-bkg">AWS</p>
+
+        </div>
       </div>
     </section>
 
