--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
       <div class="experience-chart">
         <div class="column-1">
           <h3>Yrs</h3>
-          <p>1</p>
+          <p class="grey-bkg">1</p>
           <p>2</p>
-          <p>3</p>
+          <p class="grey-bkg">3</p>
 
         </div>
         <div class="column-2">
@@ -77,7 +77,7 @@
         </div>
         <div class="column-3">
           <h3>Title</h3>
-          <p class:"grey-bkg">Software Engineer</p>
+          <p class="grey-bkg">Software Engineer</p>
           <p>Computer Scientist</p>
           <p class="grey-bkg">Dev Ops</p>
 
