--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <p>Disk Golf</p>
         <p>Codin up UI</p>
         <p>Playing lots of video games</p>
-        <p>Uising bootstrap grid</p>
+        <p>Using bootstrap grid</p>
         <p>Taking long naps</p>
       </div>
     </section>
