--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <div class="header-top">
         <img src="images/PortfolioImage.jpg" alt="Profile pic">
         <h1>William Berlin - Web Dev</h1>
+        <p class="email">william.berlin76@gmail.com</p>
         <p>Technology is my jam!</p>
       </div>
       <div class="header-bottom">
